# Cells

./: .gitignore  CMakeCache.txt.tmp31122  CMakeLists.txt  README.md
.cmake/api/v1/reply/: cache-v2-973aaf6381c11d4ae574.json  cache-v2-9d3734c0f570df3a7fb3.json  cmakeFiles-v1-932a170276cd41e31412.json  cmakeFiles-v1-b48ae73202f7aa0f61ee.json  codemodel-v2-549cd58c799049f29f91.json  codemodel-v2-d1071b69bd1007092889.json  index-2024-11-29T14-14-53-0099.json  index-2024-11-30T17-32-25-0978.json  target-MyExecutable-Debug-197391e2c23483ba93f9.json  target-MyExecutable-Debug-f4cb39d952297c94a90e.json
include/: InputField.hpp  Neurone.hpp  TEXTBOX.hpp  game.hpp  game.hpp~  glogal.hpp  glogal.hpp~
src/: InputField.cpp  game.cpp  game.cpp~  main.cpp
xmind/: клетки.xmind
